--- a/public/css/palette/catpuccin.css
+++ b/public/css/palette/catpuccin.css
@@ -9,7 +9,7 @@
 .dark {
     --bg-color: #1e1e2e;
     --bg-variant: #181825;
-    --primary: #496a9c;
-    --primary-variant: #ffffff;
+    --primary: #cba6f7;
+    --primary-variant: #f5bde6;
     --secondary: #89b4fa;
 }
