--- a/src/index.css
+++ b/src/index.css
@@ -112,12 +112,80 @@ All colors MUST be HSL.
 
   body {
     @apply text-foreground;
-    font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+    font-family: 'Chivo Mono', monospace;
     background-image: url('/_MG_7133.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
+  }
+
+  * {
+    font-family: inherit;
+  }
+
+  /* Chivo Mono utility classes */
+  .chivo-mono-thin {
+    font-family: "Chivo Mono", monospace;
+    font-optical-sizing: auto;
+    font-weight: 100;
+    font-style: normal;
+  }
+
+  .chivo-mono-extralight {
+    font-family: "Chivo Mono", monospace;
+    font-optical-sizing: auto;
+    font-weight: 200;
+    font-style: normal;
+  }
+
+  .chivo-mono-light {
+    font-family: "Chivo Mono", monospace;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+  }
+
+  .chivo-mono-regular {
+    font-family: "Chivo Mono", monospace;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  .chivo-mono-medium {
+    font-family: "Chivo Mono", monospace;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+  }
+
+  .chivo-mono-semibold {
+    font-family: "Chivo Mono", monospace;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+  }
+
+  .chivo-mono-bold {
+    font-family: "Chivo Mono", monospace;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+  }
+
+  .chivo-mono-extrabold {
+    font-family: "Chivo Mono", monospace;
+    font-optical-sizing: auto;
+    font-weight: 800;
+    font-style: normal;
+  }
+
+  .chivo-mono-black {
+    font-family: "Chivo Mono", monospace;
+    font-optical-sizing: auto;
+    font-weight: 900;
+    font-style: normal;
   }
 
   html {
